--- a/_posts/2020-06-10-回国经历分享.md
+++ b/_posts/2020-06-10-回国经历分享.md
@@ -1,9 +1,7 @@
 ---
-title: 回国经历分享征集中
+title: 回国经历分享征集
 
 categories:
-
-notshow: true
 
 
 ---
@@ -17,6 +15,10 @@ notshow: true
   - [点这里](https://i.loli.net/2020/06/11/8kM2TWZ3btdJY1j.jpg)加管理员个人微信号
   - 发送邮件至 1bigpot@gmail.com
 
-我们建议您在评论时留下您的微信号或邮箱地址，以便其他用户需要咨询时管理员可以向您发送提醒。您的联系方式会被加密存储，绝不会公开或透露给其他用户，请您放心。
+我们建议您在评论时留下您的微信号或邮箱地址，以便其他用户需要咨询时管理员可以向您发送提醒。您的联系方式会被加密存储，绝不会公开或透露给其他用户，请您放心。多谢您的分享！
 
-##### 多谢您的分享，Life is easier when shared!
+**更多相关内容：**
+
+[隔离酒店分享征集](/隔离酒店分享)
+
+[航班取消后退票分享征集](/退票分享)
