--- a/_posts/2020-06-10-转机情况.md
+++ b/_posts/2020-06-10-转机情况.md
@@ -5,7 +5,7 @@ categories:
 
 notshow: true
 
-description: 最后更新时间：6月12日
+description: 最后更新时间：6月18日
 
 ---
 
@@ -13,14 +13,14 @@ description: 最后更新时间：6月12日
 
 ### <center>港澳台</center>
 
-##### 香港：暂时不能转往内地
+##### 香港：暂时不能转往内地，可有限制转往其它地方
 
 - 首阶段暂不设往返中国内地的过境服务。
 - 香港机场往来广东各城市的客船继续暂停服务。
-- 现阶段只能作为前往第二个转机地点的跳板，且有严格限制：
-  - 到达和离开香港必须乘坐同一航空公司集团的航班。
-  - 到达和离开香港的行程必须在同一张机票中。
-  - 在香港转机停留时间不超过 8 小时。
+- 现阶段只能作为前往第二个转机地点的跳板，且有以下限制：
+  - 到达和离开香港的行程必须在同一订单中。
+  - 在香港转机停留时间不超过 24 小时。
+  - 6.15 后两程可以不是同一航空公司集团。
 
 ##### 澳门：禁止转机
 
@@ -28,12 +28,15 @@ description: 最后更新时间：6月12日
 
 ### <center>日韩</center>
 
-##### 韩国（首尔）：允许 24 小时内转机，不能入境
+##### 韩国（首尔）：允许 24 小时内转机，一般不能入境
 
-- 首尔仁川机场允许跨航站楼和过夜转机。
-- 禁区内有免费转机休息设施和收费酒店。
-- 必须行李直挂或者没有托运行李。
-- 持湖北省签发护照可能无法转机。
+- 首尔仁川机场允许跨航站楼和过夜转机
+- 无韩前或持 2020.4.5 前签发的 C1/C3 签不能入境
+- 禁区内有免费转机休息设施和收费酒店
+- 持湖北省签发护照可能无法飞往韩国
+- 如果不能入境，必须行李直挂或者没有托运行李
+  - 大韩航空可以行李直挂国航/东航/南航/厦航/山航/韩亚
+  - 韩亚航空可以行李直挂国航/东航/南航/厦航/山航/大韩
 
 <details>
 
@@ -134,7 +137,9 @@ description: 最后更新时间：6月12日
 * 东京成田机场不允许过夜转机
 * 成田机场 T1 和 T2 间可以跨航站楼转机，T3 不可以
 * 必须行李直挂或者没有托运行李
-* 大阪关西机场可以过夜转机，但目前大阪国际航班非常少，只有首尔—大阪—上海可行
+  * 全日空可以行李直挂国航/东航/南航/厦航/日航
+  * 日航可以行李直挂国航/东航/南航/厦航/全日空
+* 大阪关西机场可以过夜转机，但目前国际航班非常少，只有首尔—大阪—上海可行
 
 <details>
 
@@ -209,7 +214,7 @@ description: 最后更新时间：6月12日
 
 * 中国护照可获得 120 小时过境免签
 * 吉隆坡目前允许离开机场和过夜转机
-* 吉隆坡飞上海和广州每周各一班
+* 吉隆坡目前飞上海、广州、厦门每周各一班
 
 <details>
 
@@ -338,14 +343,13 @@ description: 最后更新时间：6月12日
 
 </details>
 
-##### 新加坡：允许不入境转机，但有严格限制
+##### 新加坡：只允许澳新出发不入境转机
 
 - 【6.11 更新】[新加坡和胜安航空公告](https://www.singaporeair.com/en_UK/sg/media-centre/news-alert/?id=kataac8r)：只有从澳大利亚和新西兰出发的乘客才可以在新加坡转机
 - 乘坐抵达新加坡的前序航班时必须办理联程值机、打印后段登机牌和行李直挂至最终目的地
 - 新加坡必须是出发国和到达国之间唯一转机点
   - 可以成行：悉尼—新加坡—上海
   - 不能成行：奥克兰—悉尼—新加坡—上海
-- 其他航空公司尚未明确在新加坡转机的条件
 - 强烈不建议从澳新以外国家出发后尝试在新加坡转机
 - 持湖北省签发护照可能无法转机。
 
@@ -416,7 +420,9 @@ description: 最后更新时间：6月12日
 
 </details>
 
-##### 菲律宾：尚不清楚是否可以转机
+##### 菲律宾：暂时仍无法转机
+
+- 菲律宾航空客服表示六月份菲律宾仍不接受国际转机
 
 ##### 泰国：禁止所有国际航班入境至 6.30
 
@@ -433,10 +439,9 @@ description: 最后更新时间：6月12日
 - 已有多个成功经验分享证明伦敦—斯里兰卡—上海路线可行
 - 其他路线仍缺少成功经验分享，建议谨慎选择
 
-##### 阿联酋：本国航司可以转机，但尚未复航中国
+##### 阿联酋（迪拜、阿布扎比）：本国航司可以转机，但尚未复航中国
 
 - 阿联酋已重新开放本国航空公司中转服务并正在逐步恢复国际航班
-
 - 阿联酋航空和阿提哈德航空均尚未恢复中国大陆航线
 
 ##### 卡塔尔（多哈）：可转机，但基本用不上
@@ -448,30 +453,186 @@ description: 最后更新时间：6月12日
 
 ### <center>欧洲</center>
 
+[点这里查看欧洲回国航班列表](https://i.loli.net/2020/06/10/zsNXSxDWa6vIZM2.png)
+
 ##### 欧洲申根区：允许 24 小时内转机，不能入境
 
 * 目前有直飞中国航班的申根国家包括：**法国、德国、荷兰、比利时、奥地利、西班牙、葡萄牙、丹麦、瑞典、芬兰、波兰、希腊**
+* 目前可以非申根转非申根，不能入境
 * 必须行李直挂或者没有托运行李
+* 大部分机场内都有转机柜台，可以不入境拿下一程登机牌
 * 如果不是从申根区出发，不能再申根区内二次转机，但可以通过非申根国跳转
   * 不能成行：纽约—巴黎—法兰克福—上海
   * 可以成行：纽约—巴黎—明斯克—斯德哥尔摩—北京
 * 布鲁塞尔机场已暂时关闭非申根转机区域
-* [点这里查看欧洲回国航班列表](https://i.loli.net/2020/06/10/zsNXSxDWa6vIZM2.png)
+* **【6.16 更新】**法国航空 6.18 起恢复每周四巴黎至上海航班
+* **【6.16 更新】**汉莎航空 6.24 起恢复每周三法兰克福至上海航线
+
+<details>
+
+<summary>点击展开申根区回国航班列表</summary>
+
+<font color=red>红色</font>为六月新增航班
+
+<table>
+<thead>
+  <tr>
+
+    <th>出发地</th>
+    <th>目的地</th>
+    <th>航司</th>
+    <th>航班号</th>
+    <th>班期</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td rowspan="4">法国<br>巴黎</td>
+    <td>北京<br>天津入境</td>
+    <td>国航</td>
+    <td>CA934</td>
+    <td>周三</td>
+  </tr>
+  <tr>
+    <td rowspan="2">上海</td>
+    <td>东航</td>
+    <td>MU570</td>
+    <td>周日</td>
+  </tr>
+  <tr>
+    <td><font color=red>法航</font></td>
+    <td><font color=red>AF198</font></td>
+    <td><font color=red>周四</font></td>
+  </tr>
+  <tr>
+    <td>广州</td>
+    <td>南航</td>
+    <td>CZ348</td>
+    <td>周二</td>
+  </tr>
+  <tr>
+    <td rowspan="3">德国<br>法兰克福</td>
+    <td rowspan="3">上海</td>
+    <td>国航</td>
+    <td>CA936</td>
+    <td>周六</td>
+  </tr>
+  <tr>
+    <td>东航</td>
+    <td>MU220</td>
+    <td>周二</td>
+  </tr>
+  <tr>
+    <td><font color=red>汉莎</font></td>
+    <td><font color=red>LH728</font></td>
+    <td><font color=red>周三</font></td>
+  </tr>
+  <tr>
+    <td rowspan="3">荷兰<br>阿姆斯特丹</td>
+    <td>上海</td>
+    <td>东航</td>
+    <td>MU772</td>
+    <td>周一</td>
+  </tr>
+  <tr>
+    <td>广州</td>
+    <td>南航</td>
+    <td>CZ308</td>
+    <td>周五</td>
+  </tr>
+  <tr>
+    <td>厦门</td>
+    <td>厦航</td>
+    <td>MF812</td>
+    <td>周三</td>
+  </tr>
+  <tr>
+    <td>比利时<br>布鲁塞尔</td>
+    <td>北京<br>西安入境</td>
+    <td>海航</td>
+    <td>HU492</td>
+    <td>周二</td>
+  </tr>
+  <tr>
+    <td>西班牙<br>马德里</td>
+    <td>北京<br>天津入境</td>
+    <td>国航</td>
+    <td>CA908</td>
+    <td>周六</td>
+  </tr>
+  <tr>
+    <td>葡萄牙<br>里斯本</td>
+    <td>西安<br>北京</td>
+    <td>首航</td>
+    <td>JD430</td>
+    <td>周六</td>
+  </tr>
+  <tr>
+    <td>奥地利<br>维也纳</td>
+    <td>北京<br>呼和浩特入境</td>
+    <td>国航</td>
+    <td>CA842</td>
+    <td>周六</td>
+  </tr>
+  <tr>
+    <td>希腊<br>雅典</td>
+    <td>北京<br>石家庄入境</td>
+    <td>国航</td>
+    <td>CA864</td>
+    <td>周六</td>
+  </tr>
+  <tr>
+    <td>波兰<br>华沙</td>
+    <td>北京<br>太原入境</td>
+    <td>国航</td>
+    <td>CA738</td>
+    <td>周五</td>
+  </tr>
+  <tr>
+    <td>丹麦<br>哥本哈根</td>
+    <td>北京<br>石家庄入境</td>
+    <td>国航</td>
+    <td>CA878</td>
+    <td>周一</td>
+  </tr>
+  <tr>
+    <td>芬兰<br>赫尔辛基</td>
+    <td>上海</td>
+    <td>吉祥</td>
+    <td>HO1608</td>
+    <td>周日</td>
+  </tr>
+  <tr>
+    <td>瑞典<br>斯德哥尔摩</td>
+    <td>北京<br>天津入境</td>
+    <td>国航</td>
+    <td>CA912</td>
+    <td>周五</td>
+  </tr>
+</tbody>
+</table>
+
+</details>
 
 ##### 英国（伦敦）：持有效英/美/加签可转机，不能入境
 
 * 必须行李直挂或者没有托运行李
+* 似乎不能更换航站楼，有待进一步核实
+* **【6.16 更新】**维珍航空 8.4 起恢复每周三法兰克福至上海航线
+
+
 
 ##### 白俄罗斯（明斯克）：可以免签入境转机
 
 * 中国护照可以免签入境白俄罗斯
-* 明斯克飞北京每周一班，在沈阳入境和隔离
+* 国航每周五 CA722 明斯克至北京，沈阳入境
+* 白俄罗斯卫生部”建议“入境和中转时提交两天内核酸检测阴性报告
 
 ##### 俄罗斯（莫斯科）：禁止转机
 
 ##### 土耳其：中国公民暂不能在土耳其转机
 
-- 土耳其航空国际航班已于 6.10 起逐步恢复，上海航线在恢复名单中，但目前暂未有明确的消息
+- 土耳其航空国际航班已于 6.10 起逐步恢复，上海航线在恢复名单中，但目前暂未明确具体时间
 
 ### <center>非洲</center>
 
@@ -504,6 +665,59 @@ description: 最后更新时间：6月12日
 
 <summary>点击展开加拿大回国航班列表</summary>
 
+<table>
+<thead>
+  <tr>
+
+    <th>出发地</th>
+    <th>目的地</th>
+    <th>航司</th>
+    <th>航班号</th>
+    <th>班期</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td rowspan="2">多伦多<br>皮尔逊</td>
+    <td>北京（西安入境）</td>
+    <td>海航</td>
+    <td>HU7976</td>
+    <td>周三</td>
+  </tr>
+  <tr>
+    <td>上海</td>
+    <td>东航</td>
+    <td>MU208</td>
+    <td>周六</td>
+  </tr>
+  <tr>
+    <td rowspan="4">温哥华</td>
+    <td>北京（沈阳入境）</td>
+    <td>国航</td>
+    <td>CA992</td>
+    <td>周日</td>
+  </tr>
+  <tr>
+    <td>广州</td>
+    <td>南航</td>
+    <td>CZ330</td>
+    <td>周三</td>
+  </tr>
+  <tr>
+    <td>厦门</td>
+    <td>厦航</td>
+    <td>MF806</td>
+    <td>周五</td>
+  </tr>
+  <tr>
+    <td>成都</td>
+    <td>川航</td>
+    <td>3U8502</td>
+    <td>周二</td>
+  </tr>
+</tbody>
+</table>
+
 </details>
 
 ##### 墨西哥（墨西哥城）：持有特定签证可以免签入境转机
@@ -511,23 +725,144 @@ description: 最后更新时间：6月12日
 * 中国护照持有者凭以下任何一件可免签入境墨西哥：
   * 有效美/加/日/英/申根签证
   * 美国绿卡或加拿大枫叶卡
-* 墨西哥目前没有直接回国的航班，只能飞日本东京二次中转
+* 墨西哥目前没有直接回国的航班，主要用于飞日本东京二次中转
 
 ### <center>澳新</center>
 
-##### 澳大利亚（悉尼）：须持有效**澳签**，长时间转机须提前申请豁免
+##### 澳大利亚（悉尼）：须持有效**澳签**，可在线申请转机申请
 
+- 澳大利亚最近重新开放了[转机签证](https://immi.homeaffairs.gov.au/visas/getting-a-visa/visa-listing/transit-771)的申请，需要提前在线申请
+- 获得转机签证后可以入境不超过 72 小时
 - 转机时间小于 8 小时：须停留在国际中转区，不得入境
-
-
 - 转机时间大于 8 小时：须提前至少 48 小时在[新南威尔士州卫生部网站](https://www.health.nsw.gov.au/Infectious/covid-19/Pages/quarantine-exemptions.aspx)申请隔离豁免
-
-
 - 信息来源：[中国驻悉尼总领事馆](http://sydney.china-consulate.org/chn/lsbhyxz/t1778126.htm)
-- 澳大利亚重新开放转机签证申请的消息有待进一步证实
+- 悉尼目前每周有三个回国航班：
 
-##### 新西兰：须持有效新西兰签证
+
+<details>
+
+<summary>点击展开悉尼回国航班列表</summary>
+
+<table>
+
+<thead>
+<tr>
+
+```
+<th>目的地</th>
+<th>航司</th>
+<th>航班号</th>
+<th>班期</th>
+```
+
+  </tr>
+</thead>
+
+<tbody>
+
+  <tr>
+
+```
+<td rowspan="2">上海</td>
+<td>东航</td>
+<td>MU780</td>
+<td>周三</td>
+```
+
+  </tr>
+  <tr>
+
+```
+<td>新航</td>
+<td>NZ289</td>
+<td>周一</td>
+```
+
+  </tr>
+  <tr>
+
+```
+<td>广州</td>
+<td>南航</td>
+<td>CZ306</td>
+<td>周日</td>
+```
+
+  </tr>
+</tbody>
+</table>
+
+</details>
+
+<br />
+
+##### 新西兰（奥克兰）：允许 24 小时内转机，不能入境
+
+- **【6.17 更新】**[网友分享](https://www.uscreditcardguide.com/youtiaojiandelengmenhuiguozhilusfo-lax-akl-can/)显示目前没有新签也可以成功转机
+- **【6.16 更新】**新西兰航空 6.22 起恢复每周一 NZ289 奥克兰至上海航班
+- 6.22 后奥克兰每周有三个回国航班：
+
+<details>
+
+<summary>点击展开奥克兰回国航班列表</summary>
+
+<table>
+<thead>
+  <tr>
+
+```
+<th>目的地</th>
+<th>航司</th>
+<th>航班号</th>
+<th>班期</th>
+```
+
+  </tr>
+</thead>
+<tbody>
+  <tr>
+
+```
+<td rowspan="2">上海</td>
+<td>东航</td>
+<td>MU780</td>
+<td>周三</td>
+```
+
+  </tr>
+  <tr>
+
+```
+<td>新航</td>
+<td>NZ289</td>
+<td>周一</td>
+```
+
+  </tr>
+  <tr>
+
+```
+<td>广州</td>
+<td>南航</td>
+<td>CZ306</td>
+<td>周日</td>
+```
+
+  </tr>
+</tbody>
+</table>
+
+</details>
 
 <br />
 
 欢迎您在下方的评论区补充和讨论世界各地的转机情况。
+
+**更多相关内容：**
+
+[最新最全回国航班列表](/航班列表)
+
+[北美回国路线汇总](/北美路线)
+
+[回国经历分享征集](/回国经历分享)
+
