--- a/_posts/2020-06-10-隔离酒店分享.md
+++ b/_posts/2020-06-10-隔离酒店分享.md
@@ -1,5 +1,5 @@
 ---
-title: 隔离酒店分享征集中
+title: 隔离酒店分享征集
 
 categories:
 
@@ -8,7 +8,7 @@ notshow: true
 
 ---
 
-如果您在过去**_一个月_**内成功回到国内，欢迎您在下方的**_评论区_**中分享您隔离酒店的情况。分享时请包括以下信息：
+如果您在过去**_一个月_**内成功回到国内，欢迎您在页面下方的**_评论区_**中分享您隔离酒店的情况。分享时请包括以下信息：
 
 - 城市名、酒店全名、入住日期
 - 费用（住宿费和餐费）
@@ -27,6 +27,10 @@ notshow: true
 
 我们建议您在评论时留下您的微信号或邮箱地址，以便其他用户需要咨询时管理员可以向您发送提醒。您的联系方式会被加密存储，绝不会公开或透露给其他用户，请您放心。
 
-在收集到足够多的分享后，我们将推出隔离酒店信息汇总页面，为尚未回国的朋友提供帮助。
+在收集到足够多的分享后，我们将推出隔离酒店信息汇总页面，为尚未回国的朋友提供帮助。多谢您的分享！
 
-##### 多谢您的分享，Life is easier when shared!
+**更多相关内容：**
+
+[回国经历分享征集](/回国经历分享)
+
+[航班取消后退票分享征集](/退票分享)
