--- a/_posts/2020-06-10-转机情况.md
+++ b/_posts/2020-06-10-转机情况.md
@@ -39,96 +39,72 @@ description: 最后更新时间：6月18日
   - 韩亚航空可以行李直挂国航/东航/南航/厦航/山航/大韩
 
 <details>
-
 <summary>点击展开首尔仁川回国航班列表</summary>
-
 <center>
-
 <table>
 <thead>
-  <tr>
-
+<tr>
 <th>目的地</th>
 <th>航司</th>
 <th>航班号</th>
 <th>班期</th>
-
-  </tr>
+</tr>
 </thead>
 <tbody>
-  <tr>
-
-<td>北京（青岛入境）</td>
+<tr>
+<td>北京<br>青岛入境</td>
 <td>国航</td>
 <td>CA124</td>
 <td>周五</td>
-
-  </tr>
-  <tr>
-
+</tr>
+<tr>
 <td>上海</td>
 <td>东航</td>
 <td>MU5042</td>
 <td>周五</td>
-
-  </tr>
-  <tr>
-
+</tr>
+<tr>
 <td rowspan="2">沈阳</td>
 <td>南航</td>
 <td>CZ682</td>
 <td>周日</td>
-
-  </tr>
-  <tr>
-
+</tr>
+<tr>
 <td>大韩</td>
 <td>KE831</td>
 <td>周五</td>
-
-  </tr>
-  <tr>
-
+</tr>
+<tr>
 <td>长春</td>
 <td>韩亚</td>
 <td>OZ303</td>
 <td>周日</td>
-
-  </tr>
-  <tr>
-
+</tr>
+<tr>
 <td rowspan="2">青岛</td>
 <td>山航</td>
 <td>SC4088</td>
 <td>周五</td>
-
-  </tr>
-  <tr>
-
+</tr>
+<tr>
 <td>青岛航</td>
 <td>QW9902</td>
 <td>周六</td>
-
-  </tr>
-  <tr>
-
+</tr>
+<tr>
 <td>威海</td>
 <td>济州航</td>
 <td>7C8502</td>
 <td>周三</td>
-
-  </tr>
-  <tr>
-
+</tr>
+<tr>
 <td>厦门</td>
 <td>厦航</td>
 <td>MF872</td>
 <td>周一</td>
-
-  </tr>
+</tr>
 </tbody>
 </table>
-
 </center>
 </details>
 
