--- a/_posts/2020-06-03-北美路线.md
+++ b/_posts/2020-06-03-北美路线.md
@@ -23,12 +23,14 @@ description: 最后更新时间：6月12日
 
 <center>
 
+注：<span style="color:red;">红色</span>为最新增加的航班
+
 <table>
 <thead>
   <tr>
 
-    <th>出发地</th>
-    <th>目的地</th>
+    <th>出发</th>
+    <th>到达</th>
     <th>航司</th>
     <th>航班号</th>
     <th>班期</th>
@@ -62,31 +64,31 @@ description: 最后更新时间：6月12日
     <td>周一</td>
   </tr>
   <tr>
-    <td>西雅图</td>
-    <td>上海</td>
-    <td>达美</td>
-    <td>DL281</td>
-    <td>周四</td>
+    <td><span style="color:red;">西雅图</span></td>
+    <td><span style="color:red;">上海</span></td>
+    <td><span style="color:red;">达美</span></td>
+    <td><span style="color:red;">DL281</span></td>
+    <td><span style="color:red;">周四</span></td>
   </tr>
   <tr>
-    <td>底特律</td>
-    <td>上海</td>
-    <td>达美</td>
-    <td>DL583</td>
-    <td>周五</td>
+    <td><span style="color:red;">底特律</span></td>
+    <td><span style="color:red;">上海</span></td>
+    <td><span style="color:red;">达美</span></td>
+    <td><span style="color:red;">DL583</span></td>
+    <td><span style="color:red;">周五</span></td>
   </tr>
   <tr>
-    <td colspan="5">达美经停首尔仁川更换机组</td>
+    <td colspan="5"><span style="color:red;">达美经停首尔仁川更换机组</span></td>
   </tr>
   <tr>
-    <td>旧金山</td>
-    <td>上海</td>
-    <td>美联航</td>
-    <td>UA857</td>
-    <td>待定</td>
+    <td><span style="color:red;">旧金山</span></td>
+    <td><span style="color:red;">上海</span></td>
+    <td><span style="color:red;">美联航</span></td>
+    <td><span style="color:red;">UA857</span></td>
+    <td><span style="color:red;">待定</span></td>
   </tr>
   <tr>
-    <td colspan="5">美联航经停东京成田更换机组</td>
+    <td colspan="5"><span style="color:red;">美联航经停东京成田更换机组</span></td>
   </tr>
 </tbody>
 </table>
@@ -367,6 +369,8 @@ description: 最后更新时间：6月12日
 
 <summary>点击展开巴黎回国航班列表</summary>
 
+注：<span style="color:red;">红色</span>为最新增加的航班
+
 <table>
 <thead>
   <tr>
@@ -391,9 +395,9 @@ description: 最后更新时间：6月12日
     <td>周日</td>
   </tr>
   <tr>
-    <td>法航</td>
-    <td>AF198</td>
-    <td>周四</td>
+    <td><span style="color:red;">法航</span></td>
+    <td><span style="color:red;">AF198</span></td>
+    <td><span style="color:red;">周四</span></td>
   </tr>
   <tr>
     <td>广州</td>
@@ -418,6 +422,8 @@ description: 最后更新时间：6月12日
 
 <summary>点击展开法兰克福回国航班列表</summary>
 
+注：<span style="color:red;">红色</span>为最新增加的航班
+
 <table>
 <thead>
   <tr>
@@ -441,9 +447,9 @@ description: 最后更新时间：6月12日
     <td>周二</td>
   </tr>
   <tr>
-    <td>汉莎</td>
-    <td>LH728</td>
-    <td>周三</td>
+    <td><span style="color:red;">汉莎</span></td>
+    <td><span style="color:red;">LH728</span></td>
+    <td><span style="color:red;">周三</span></td>
   </tr>
 </tbody>
 </table>
@@ -536,8 +542,8 @@ description: 最后更新时间：6月12日
 <tr>
 
 ```
-<th>出发地</th>
-<th>目的地</th>
+<th>出发</th>
+<th>到达</th>
 <th>航司</th>
 <th>航班号</th>
 <th>班期</th>
