--- a/_posts/2020-06-02-转机情况.md
+++ b/_posts/2020-06-02-转机情况.md
@@ -26,6 +26,8 @@ description: 最后更新时间：6月18日
 
 ##### 台湾：禁止转机
 
+
+
 ### <center>日韩</center>
 
 ##### 韩国（首尔）：允许 24 小时内转机，一般不能入境
@@ -213,21 +215,35 @@ description: 最后更新时间：6月18日
 
   <tr>
 
-<td> 上海 </td>
-<td> 上航 </td>
-<td>FM886 </td>
-<td> 周日 </td>
+<td>上海</td>
+<td>上航</td>
+<td>FM886</td>
+<td>周日</td>
 
   </tr>
   <tr>
 
-<td> 广州 </td>
-<td> 南航 </td>
-<td> CZ350 </td>
-<td> 周二 </td>
+<td>广州</td>
+<td>南航</td>
+<td>CZ350</td>
+<td>周二</td>
 
   </tr>
+
+  <tr>
+
+<td>厦门</td>
+
+<td>厦航</td>
+
+<td>MF848</td>
+
+<td>周三</td>
+
+  </tr>
+
 </tbody>
+
 </table>
 
 </details>
@@ -429,8 +445,6 @@ description: 最后更新时间：6月18日
 
 ### <center>欧洲</center>
 
-[点这里查看欧洲回国航班列表](https://i.loli.net/2020/06/10/zsNXSxDWa6vIZM2.png)
-
 ##### 欧洲申根区：允许 24 小时内转机，不能入境
 
 * 目前有直飞中国航班的申根国家包括：**法国、德国、荷兰、比利时、奥地利、西班牙、葡萄牙、丹麦、瑞典、芬兰、波兰、希腊**
@@ -448,7 +462,7 @@ description: 最后更新时间：6月18日
 
 <summary>点击展开申根区回国航班列表</summary>
 
-<font color=red>红色</font>为六月新增航班
+注：<span style="color:red;">红色</span>为最新增加的航班
 
 <table>
 <thead>
@@ -476,9 +490,9 @@ description: 最后更新时间：6月18日
     <td>周日</td>
   </tr>
   <tr>
-    <td><font color=red>法航</font></td>
-    <td><font color=red>AF198</font></td>
-    <td><font color=red>周四</font></td>
+    <td><span style="color:red;">法航</span></td>
+    <td><span style="color:red;">AF198</span></td>
+    <td><span style="color:red;">周四</span></td>
   </tr>
   <tr>
     <td>广州</td>
@@ -499,9 +513,9 @@ description: 最后更新时间：6月18日
     <td>周二</td>
   </tr>
   <tr>
-    <td><font color=red>汉莎</font></td>
-    <td><font color=red>LH728</font></td>
-    <td><font color=red>周三</font></td>
+    <td><span style="color:red;">汉莎</span></td>
+    <td><span style="color:red;">LH728</span></td>
+    <td><span style="color:red;">周三</span></td>
   </tr>
   <tr>
     <td rowspan="3">荷兰<br>阿姆斯特丹</td>
