--- a/_posts/2020-06-10-微信群聊.md
+++ b/_posts/2020-06-10-微信群聊.md
@@ -1,5 +1,5 @@
 ---
-title: 世界各地转机情况汇总
+title: 回国微信群入口
 
 categories:
 
@@ -8,7 +8,7 @@ notshow: true
 
 ---
 
-#### 海外抱团取暖群
+#### 海外回国群
 
 现有涵盖世界各地的共 42 个群聊
 
@@ -26,7 +26,7 @@ notshow: true
 
 
 
-#### 回国入境交流群
+#### 回国入境群
 
 现有涵盖全国各入境城市的共 33 个群聊
 
@@ -50,11 +50,11 @@ notshow: true
 
 #### 退票讨论群
 
-现有亚洲、欧洲、北美、携程、其它第三方平台、香港转机退票等退票群
+现有亚洲、欧洲、北美、携程、其它第三方平台等退票群
 
 [群聊入口](https://mp.weixin.qq.com/s/KO0rZ0BzDTlmwLXP_Npc8Q)
 
-
+<br />
 
 如果群已满或二维码已过期，请[点这里](https://mp.weixin.qq.com/s/lm14EySamxKjeVbmqG_Nng)添加管理员微信号，我会加您进群。
 
