--- a/_posts/2020-06-01-航班列表.md
+++ b/_posts/2020-06-01-航班列表.md
@@ -8,107 +8,46 @@ description: 最后更新时间：6月22日
 
 ---
 
-
-
-**【6.21 更新】土耳其航空 7 月可能将恢复广州航线：**
-
-根据土耳其航空[最新的飞行计划](https://www.turkishairlines.com/en-tr/announcements/coronavirus-outbreak/current-flight-plan/index.html)，7 月 4 日起将恢复伊斯坦布尔至广州航线，每周六一班，但尚未知是否已获得广州市的接收函和中国民航局的批准。与此同时土航也正在恢复大量伊斯坦布尔至欧洲、中东和北美的航线。目前该航线 7 月份的机票暂时不可购买，8 月份及以后的机票正在[土航官网](https://www.turkishairlines.com/zh-int/)销售中。
-
-**【6.20 更新】国航、东航、南航 7 月国际航班计划：**
-
-- **国航**：仅更改了两个航班的入境点，具体为：明斯克至北京入境点改为呼和浩特、莫斯科至北京改为一周更换一个入境点。其它航班和 6 月均完全一致。
-- **东航和上航**：有三处变化：新增上航曼谷至上海航线、东航曼谷至南京航线改为曼谷至上海、移除达卡至昆明航线（实际上六月也没有执行）。其它航班和 6 月均完全一致。
-- **南航**：所有航班都和 6 月完全一致。
-
-**【6.16 更新】达美、美联航、维珍、法航、汉莎、新西兰航空即将恢复上海航线：**
-
-在获得了上海市的接收函和中国民航局的批准后，上述六家航空公司在 6.16 集中宣布将恢复上海航线。除美联航外，其余五家航空公司均公布了航班的班期和恢复时间。
-
-<details>
-  <summary>点击展开六家航空公司至上海航班列表</summary>
-  <b>注：所有航班目的地均为上海浦东。</b>
-  <table>
-    <thead>
-      <tr>
-        <th>出发地</th>
-        <th>航司</th>
-        <th>航班号</th>
-        <th>班期</th>
-        <th>恢复时间</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>西雅图</td>
-        <td rowspan="2">达美</td>
-        <td>DL281</td>
-        <td>周四</td>
-        <td>6.25</td>
-      </tr>
-      <tr>
-        <td>底特律</td>
-        <td>DL583</td>
-        <td>周五</td>
-        <td>7.3</td>
-      </tr>
-      <tr>
-        <td>旧金山</td>
-        <td>美联航</td>
-        <td>CZ306</td>
-        <td>待定</td>
-        <td>7月</td>
-      </tr>
-      <tr>
-        <td>伦敦</td>
-        <td>维珍</td>
-        <td>VS250</td>
-        <td>周二</td>
-        <td>8.4</td>
-      </tr>
-      <tr>
-        <td>巴黎</td>
-        <td>法航</td>
-        <td>AF198</td>
-        <td>周四</td>
-        <td>6.18</td>
-      </tr>
-      <tr>
-        <td>法兰克福</td>
-        <td>汉莎</td>
-        <td>LH728</td>
-        <td>周三</td>
-        <td>6.24</td>
-      </tr>
-      <tr>
-        <td>奥克兰</td>
-        <td>新西兰</td>
-        <td>NZ289</td>
-        <td>周一</td>
-        <td>6.22</td>
-      </tr>
-    </tbody>
-  </table>
-</details>
-
-<br />
-
-以下是按照地域划分的世界各地回国航班完整列表。
+图表为笔者个人制作，欢迎您**转发**和**分享**给更多需要回国的朋友，经笔者授权后可以转载到其它公众号或平台。由于航班数量众多，出现差错在所难免，敬请谅解。如果您发现错误，十分欢迎您私聊指正，我会在后续更新中修改。
 
 注：列表中所有“北京”均为北京首都国际机场，“上海”均为上海浦东国际机场。
 
-![航班列表 1.png](https://i.loli.net/2020/06/22/suR7KcbQwpoB8Ti.png)
+![航班列表.png](https://i.loli.net/2020/06/27/4Lfde2xIWzZbchg.png)
 
-![航班列表 2.png](https://i.loli.net/2020/06/22/WsYc4GhLI8jgrdM.png)
+- **【最新】**美联航 7.8 起恢复**旧金山**经首尔至上海航线，每周三和周六各一班。
+- 达美航空 6.25 起恢复**西雅图**经首尔至上海航线，每周四一班。
+- 达美航空 7.3 起恢复**底特律**经首尔至上海航线，每周五一班。
 
-![航班列表 3.png](https://i.loli.net/2020/06/22/hgsdvDNlt3XQfyY.png)
+![航班列表 2.png](https://i.loli.net/2020/06/27/ESJZix8cMszkdBy.png)
 
-![航班列表 4.png](https://i.loli.net/2020/06/22/TdC91zEFIqRK7sy.png)
+- **【最新】**根据瑞航订票系统，瑞士国际航空 7.10 起恢复**苏黎世**至上海航线，每周五一班，但尚不清楚是否已获得批准。
+- **【最新】**俄罗斯航空 7.2 起恢复**莫斯科**至上海航线，每周四一班。
+- 法国航空 6.18 起恢复**巴黎**至上海航线，每周四一班。
+- 汉莎航空 6.24 起恢复**法兰克福**至上海航线，每周三一班。
+- 维珍航空 8.4 起恢复**伦敦**至上海航线，每周二一班。
+- 根据土航官网，土耳其航空 7.4 起恢复**伊斯坦布尔**至广州航线，每周六一班，但尚不清楚是否已获得批准。
+- 中国国航**莫斯科**至北京航线 7 月改为一周更换一个入境点。
+- 中国国航**明斯克**至北京航线 7 月入境点改为呼和浩特。
 
-![航班列表 5.png](https://i.loli.net/2020/06/22/izBxWSeljQgsqG8.png)
+![航班列表 3.png](https://i.loli.net/2020/06/27/X5ZY7fMyc6H2x4w.png)
 
-![航班列表 6.png](https://i.loli.net/2020/06/22/JumcBalronyfeOg.png)
+- 新西兰航空 6.22 起恢复**奥克兰**至上海浦东航线，每周一一班。
 
-![航班列表 7.png](https://i.loli.net/2020/06/22/fUnzcLuFhXZ2plA.png)
+![航班列表 4.png](https://i.loli.net/2020/06/27/kEHRUKvAbz7TdlB.png)
+
+![航班列表 5.png](https://i.loli.net/2020/06/27/1upAJgFojte6CrY.png)
+
+- 吉祥航空 7.3 起新增**曼谷**至上海航线，每周五一班
+- 上海航空 7.4 起新增**曼谷**至上海航线，每周六一班
+- 东方航空**曼谷**至南京航线 7.5 起改为曼谷至上海，每周日一班
+
+![航班列表 6.png](https://i.loli.net/2020/06/27/UtFlGg6diyxvKmL.png)
+
+- 东方航空 7 月移除**达卡**至昆明航线（之前实际也没有执行）。
+- 南方航空**达卡**至广州航线由于出现一班十例以上确诊航班被熔断，6.22-7.13 间的四班取消执行。
+- **印度**和**尼泊尔**航线实际恢复时间继续延后。
+
+![航班列表 7.png](https://i.loli.net/2020/06/27/iGgJMAy5DEYjqNP.png)
 
 欢迎在下方的**评论区**探讨交流，如您发现列表中有错误欢迎指正。
 
