--- a/_posts/2020-06-02-转机情况.md
+++ b/_posts/2020-06-02-转机情况.md
@@ -5,7 +5,7 @@ categories:
 
 notshow: true
 
-description: 最后更新时间：6月20日
+description: 最后更新时间：6月26日
 
 ---
 
@@ -13,18 +13,27 @@ description: 最后更新时间：6月20日
 
 ### <center>港澳台</center>
 
-##### 香港：暂时不能转往内地，可有限制转往其它地方
+##### 香港：仍然不能往返内地，可有限制转往其它地方
 
-- 首阶段暂不设往返中国内地的过境服务。
-- 香港机场往来广东各城市的客船继续暂停服务。
+- 首阶段暂不设往返中国内地的过境服务
+- 香港机场往来广东各城市的客船继续暂停服务
 - 现阶段只能作为前往第二个转机地点的跳板，且有以下限制：
-  - 到达和离开香港的行程必须在同一订单中。
-  - 在香港转机停留时间不超过 24 小时。
-  - 6.15 后两程可以不是同一航空公司集团。
+  - 到达和离开香港的行程必须在同一订单中
+  - 必须行李直挂或者没有托运行李
+  - 在香港转机停留时间不超过 24 小时
+  - 6.15 后两程可以不是同一航空公司集团
+
+##### 台湾（桃园）：仍然不能往返大陆，可有限制转往其它地方
+
+- 台湾桃园国际机场 6.25 起有限度开放转机
+- 继续暂停接受往返中国大陆旅客经台湾转机
+- 现阶段只能作为前往第二个转机地点的跳板，且有以下限制：
+  - 仅限中华/华信、长荣/立荣、国泰/港龙三家航空公司
+  - 须全程搭乘同一航空集团，在起始点拿到全程登机牌
+  - 必须行李直挂或者没有托运行李
+  - 在桃园机场转机停留时间不超过 8 小时
 
 ##### 澳门：禁止转机
-
-##### 台湾：禁止转机
 
 
 
@@ -170,14 +179,6 @@ description: 最后更新时间：6月20日
 </details>
 
 
-​          
-
-
-
-
-
-
-
 ### <center>东南亚</center>
 
 ##### 马来西亚（吉隆坡）：可以免签入境过夜转机
@@ -187,228 +188,170 @@ description: 最后更新时间：6月20日
 * 吉隆坡目前飞上海、广州、厦门每周各一班
 
 <details>
-
-<summary>点击展开吉隆坡回国航班列表</summary>
-
-<table>
-<thead>
-
-  <tr>
-
-<th>目的地</th>
-<th>航司</th>
-<th>航班号</th>
-<th>班期</th>
-
-  </tr>
-
-</thead>
-<tbody>
-
-  <tr>
-
-<td>上海</td>
-<td>上航</td>
-<td>FM886</td>
-<td>周日</td>
-
-  </tr>
-  <tr>
-
-<td>广州</td>
-<td>南航</td>
-<td>CZ350</td>
-<td>周二</td>
-
-  </tr>
-
-  <tr>
-
-<td>厦门</td>
-
-<td>厦航</td>
-
-<td>MF848</td>
-
-<td>周三</td>
-
-  </tr>
-
-</tbody>
-
-</table>
-
-</details>
+  <summary>点击展开吉隆坡回国航班列表</summary>
+    <table>
+      <thead>
+        <tr>
+          <th>目的地</th>
+          <th>航司</th>
+          <th>航班号</th>
+          <th>班期</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>上海</td>
+          <td>上航</td>
+          <td>FM886</td>
+          <td>周日</td>
+        </tr>
+        <tr>
+          <td rowspan="4">广州</td>
+          <td>南航</td>
+          <td>CZ350</td>
+          <td>周二</td>
+        </tr>
+        <tr>
+          <td>马航</td>
+          <td>MH376</td>
+          <td>周一</td>
+        </tr>
+        <tr>
+          <td>亚航</td>
+          <td>AK116</td>
+          <td>周三</td>
+        </tr>
+        <tr>
+          <td>马印</td>
+          <td>OD612</td>
+          <td>周一</td>
+        </tr>
+        <tr>
+          <td>厦门</td>
+          <td>厦航</td>
+          <td>MF848</td>
+          <td>周三</td>
+        </tr>
+      </tbody>
+  </table>
+</details>	 
 
 ##### 柬埔寨（金边）：允许同日转机，不得入境
 
 - 须持有当日早 6:00 至次日凌晨 3:00 间离开金边的机票
 - 必须在第一程就打好登机牌，且行李直挂或者没有托运行李
-- 可能需要提供三天内的新冠病毒阴性检测结果
-- 澜湄航空菲律宾—金边—广州线路已有多个成功经历分享
-- 其它经金边转机的线路数据仍然不足，建议谨慎选择
+- 有分享显示**西哈努克**（西港）也可以转机，但具体情况不祥。
 
 <details>
-
-<summary>点击展开金边回国航班列表</summary>
-
-<table>
-<thead>
-
-  <tr>
-
-<th>目的地</th>
-<th>航司</th>
-<th>航班号</th>
-<th>班期</th>
-
-  </tr>
-
-</thead>
-<tbody>
-
-  <tr>
-
-<td>北京 </td>
-<td>国航 </td>
-<td>CA746 </td>
-<td>周四 </td>
-
-  </tr>
-  <tr>
-
-<td>上海 </td>
-<td>东航 </td>
-<td>MU760 </td>
-<td>周三 </td>
-
-  </tr>
-  <tr>
-
-<td rowspan="2">广州 </td>
-<td>南航 </td>
-<td>CZ8314 </td>
-<td>周一 </td>
-
-  </tr>
-  <tr>
-
-<td>澜湄 </td>
-<td>LQ908 </td>
-<td>周六 </td>
-
-  </tr>
-  <tr>
-
-<td>南京 </td>
-<td>春秋 </td>
-<td>9C6242 </td>
-<td>周三 </td>
-
-  </tr>
-  <tr>
-
-<td>厦门 </td>
-<td>厦航 </td>
-<td>MF8692 </td>
-<td>周三 </td>
-
-  </tr>
-  <tr>
-
-<td>成都 </td>
-<td>柬航 </td>
-<td>KR962 </td>
-<td>周三 </td>
-
-  </tr>
-</tbody>
-</table>
-
+  <summary>点击展开金边回国航班列表</summary>
+  <table>
+    <thead>
+      <tr>
+        <th>目的地</th>
+        <th>航司</th>
+        <th>航班号</th>
+        <th>班期</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>北京</td>
+        <td>国航</td>
+        <td>CA746</td>
+        <td>周四</td>
+      </tr>
+      <tr>
+        <td>上海</td>
+        <td>东航</td>
+        <td>MU760</td>
+        <td>周三</td>
+      </tr>
+      <tr>
+        <td rowspan="3">广州</td>
+        <td>南航</td>
+        <td>CZ8314</td>
+        <td>周一</td>
+      </tr>
+      <tr>
+        <td>澜湄</td>
+        <td>LQ908</td>
+        <td>周六</td>
+      </tr>
+      <tr>
+        <td>吴哥航</td>
+        <td>K6668</td>
+        <td>周四</td>
+      </tr>
+      <tr>
+        <td>南京</td>
+        <td>春秋</td>
+        <td>9C6242</td>
+        <td>周三</td>
+      </tr>
+      <tr>
+        <td>厦门</td>
+        <td>厦航</td>
+        <td>MF8692</td>
+        <td>周三</td>
+      </tr>
+      <tr>
+        <td>成都</td>
+        <td>柬航</td>
+        <td>KR962</td>
+        <td>周三</td>
+      </tr>
+    </tbody>
+  </table>
 </details>
 
-##### 新加坡：只允许澳新出发不入境转机
+##### 新加坡：须乘新航集团且从东亚或澳新出发，不能入境
 
-- 【6.11 更新】[新加坡和胜安航空公告](https://www.singaporeair.com/en_UK/sg/media-centre/news-alert/?id=kataac8r)：只有从澳大利亚和新西兰出发的乘客才可以在新加坡转机
-- 乘坐抵达新加坡的前序航班时必须办理联程值机、打印后段登机牌和行李直挂至最终目的地
-- 新加坡必须是出发国和到达国之间唯一转机点
-  - 可以成行：悉尼—新加坡—上海
-  - 不能成行：奥克兰—悉尼—新加坡—上海
-- 强烈不建议从澳新以外国家出发后尝试在新加坡转机
+- 【6.23 更新】新加坡和胜安航空[更新了转机信息](https://www.singaporeair.com/en_UK/sg/media-centre/news-alert/?id=kataac8r)：
+  - 只能从以下区域出发：中国大陆、香港、台湾、日本、韩国、澳洲、新西兰
+  - 必须全程乘坐新航/胜安/酷航，且在同一张机票中
+  - 尚不清楚是否允许以下路线：欧美—日韩澳新—新加坡—中国
 - 持湖北省签发护照可能无法转机。
 
 <details>
-
-<summary>点击展开新加坡回国航班列表</summary>
-
-<table>
-<thead>
-  <tr>
-
-    <th>到达</th>
-    <th>航司</th>
-    <th>航班号</th>
-    <th>班期</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td>上海 </td>
-    <td>东航 </td>
-    <td>MU568 </td>
-    <td>周四 </td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>吉祥 </td>
-    <td>HO1606 </td>
-    <td>周五 </td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>新航 </td>
-    <td>SQ830 </td>
-    <td>周一 </td>
-  </tr>
-  <tr>
-    <td rowspan="2">广州 </td>
-    <td>南航 </td>
-    <td>CZ3040 </td>
-    <td>周二 </td>
-  </tr>
-  <tr>
-    <td>酷航 </td>
-    <td>TR100 </td>
-    <td>周日 </td>
-  </tr>
-  <tr>
-    <td>厦门 </td>
-    <td>厦航 </td>
-    <td>MF852 </td>
-    <td>周三 </td>
-  </tr>
-  <tr>
-    <td>成都 </td>
-    <td>国航 </td>
-    <td>CA404 </td>
-    <td>周一 </td>
-  </tr>
-  <tr>
-    <td>重庆 </td>
-    <td>胜安 </td>
-    <td>MI972 </td>
-    <td>周一 </td>
-  </tr>
-</tbody>
-</table>
-
+  <summary>点击展开新航/胜安/酷航回国航班列表</summary>
+  <table>
+    <thead>
+      <tr>
+        <th>到达</th>
+        <th>航司</th>
+        <th>航班号</th>
+        <th>班期</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>上海</td>
+        <td>新航</td>
+        <td>SQ830</td>
+        <td>周一</td>
+      </tr>
+      <tr>
+        <td>广州</td>
+        <td>酷航</td>
+        <td>TR100</td>
+        <td>周日</td>
+      </tr>
+      <tr>
+        <td>重庆</td>
+        <td>胜安</td>
+        <td>MI972</td>
+        <td>周一</td>
+      </tr>
+    </tbody>
+  </table>
 </details>
 
 ##### 菲律宾：暂时仍无法转机
 
 - 菲律宾航空客服表示六月份菲律宾仍不接受国际转机
+- 小道消息：菲航可能会在 7 月中旬恢复厦门航线
 
-##### 泰国：禁止所有国际航班入境至 6.30
+##### 泰国：6.30 前禁止所有国际航班入境
 
 ##### 越南：所有国际航班均已停飞
 
@@ -451,149 +394,144 @@ description: 最后更新时间：6月20日
 * **【6.16 更新】**汉莎航空 6.24 起恢复每周三法兰克福至上海航线
 
 <details>
-
-<summary>点击展开申根区回国航班列表</summary>
-
-注：<span style="color:red;">红色</span>为最新增加的航班
-
-<table>
-<thead>
-  <tr>
-
-    <th>出发地</th>
-    <th>目的地</th>
-    <th>航司</th>
-    <th>航班号</th>
-    <th>班期</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td rowspan="4">法国<br>巴黎</td>
-    <td>北京<br>天津入境</td>
-    <td>国航</td>
-    <td>CA934</td>
-    <td>周三</td>
-  </tr>
-  <tr>
-    <td rowspan="2">上海</td>
-    <td>东航</td>
-    <td>MU570</td>
-    <td>周日</td>
-  </tr>
-  <tr>
-    <td><span style="color:red;">法航</span></td>
-    <td><span style="color:red;">AF198</span></td>
-    <td><span style="color:red;">周四</span></td>
-  </tr>
-  <tr>
-    <td>广州</td>
-    <td>南航</td>
-    <td>CZ348</td>
-    <td>周二</td>
-  </tr>
-  <tr>
-    <td rowspan="3">德国<br>法兰克福</td>
-    <td rowspan="3">上海</td>
-    <td>国航</td>
-    <td>CA936</td>
-    <td>周六</td>
-  </tr>
-  <tr>
-    <td>东航</td>
-    <td>MU220</td>
-    <td>周二</td>
-  </tr>
-  <tr>
-    <td><span style="color:red;">汉莎</span></td>
-    <td><span style="color:red;">LH728</span></td>
-    <td><span style="color:red;">周三</span></td>
-  </tr>
-  <tr>
-    <td rowspan="3">荷兰<br>阿姆斯特丹</td>
-    <td>上海</td>
-    <td>东航</td>
-    <td>MU772</td>
-    <td>周一</td>
-  </tr>
-  <tr>
-    <td>广州</td>
-    <td>南航</td>
-    <td>CZ308</td>
-    <td>周五</td>
-  </tr>
-  <tr>
-    <td>厦门</td>
-    <td>厦航</td>
-    <td>MF812</td>
-    <td>周三</td>
-  </tr>
-  <tr>
-    <td>比利时<br>布鲁塞尔</td>
-    <td>北京<br>西安入境</td>
-    <td>海航</td>
-    <td>HU492</td>
-    <td>周二</td>
-  </tr>
-  <tr>
-    <td>西班牙<br>马德里</td>
-    <td>北京<br>天津入境</td>
-    <td>国航</td>
-    <td>CA908</td>
-    <td>周六</td>
-  </tr>
-  <tr>
-    <td>葡萄牙<br>里斯本</td>
-    <td>西安<br>北京</td>
-    <td>首航</td>
-    <td>JD430</td>
-    <td>周六</td>
-  </tr>
-  <tr>
-    <td>奥地利<br>维也纳</td>
-    <td>北京<br>呼和浩特入境</td>
-    <td>国航</td>
-    <td>CA842</td>
-    <td>周六</td>
-  </tr>
-  <tr>
-    <td>希腊<br>雅典</td>
-    <td>北京<br>石家庄入境</td>
-    <td>国航</td>
-    <td>CA864</td>
-    <td>周六</td>
-  </tr>
-  <tr>
-    <td>波兰<br>华沙</td>
-    <td>北京<br>太原入境</td>
-    <td>国航</td>
-    <td>CA738</td>
-    <td>周五</td>
-  </tr>
-  <tr>
-    <td>丹麦<br>哥本哈根</td>
-    <td>北京<br>石家庄入境</td>
-    <td>国航</td>
-    <td>CA878</td>
-    <td>周一</td>
-  </tr>
-  <tr>
-    <td>芬兰<br>赫尔辛基</td>
-    <td>上海</td>
-    <td>吉祥</td>
-    <td>HO1608</td>
-    <td>周日</td>
-  </tr>
-  <tr>
-    <td>瑞典<br>斯德哥尔摩</td>
-    <td>北京<br>天津入境</td>
-    <td>国航</td>
-    <td>CA912</td>
-    <td>周五</td>
-  </tr>
-</tbody>
-</table>
-
+  <summary>点击展开申根区回国航班列表</summary>
+  <p>注：红色为最新增加的航班</p>
+  <table>
+		<thead>
+  		<tr>
+        <th>出发地</th>
+        <th>目的地</th>
+        <th>航司</th>
+        <th>航班号</th>
+        <th>班期</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td rowspan="4">法国<br>巴黎</td>
+        <td>北京<br>天津入境</td>
+        <td>国航</td>
+        <td>CA934</td>
+        <td>周三</td>
+      </tr>
+      <tr>
+        <td rowspan="2">上海</td>
+        <td>东航</td>
+        <td>MU570</td>
+        <td>周日</td>
+      </tr>
+      <tr>
+        <td>法航</td>
+        <td>AF198</td>
+        <td>周四</td>
+      </tr>
+      <tr>
+        <td>广州</td>
+        <td>南航</td>
+        <td>CZ348</td>
+        <td>周二</td>
+      </tr>
+      <tr>
+        <td rowspan="3">德国<br>法兰克福</td>
+        <td rowspan="3">上海</td>
+        <td>国航</td>
+        <td>CA936</td>
+        <td>周六</td>
+      </tr>
+      <tr>
+        <td>东航</td>
+        <td>MU220</td>
+        <td>周二</td>
+      </tr>
+      <tr>
+        <td>汉莎</td>
+        <td>LH728</td>
+        <td>周三</td>
+      </tr>
+      <tr>
+        <td rowspan="3">荷兰<br>阿姆斯特丹</td>
+        <td>上海</td>
+        <td>东航</td>
+        <td>MU772</td>
+        <td>周一</td>
+      </tr>
+      <tr>
+        <td>广州</td>
+        <td>南航</td>
+        <td>CZ308</td>
+        <td>周五</td>
+      </tr>
+      <tr>
+        <td>厦门</td>
+        <td>厦航</td>
+        <td>MF812</td>
+        <td>周三</td>
+      </tr>
+      <tr>
+        <td>比利时<br>布鲁塞尔</td>
+        <td>北京<br>西安入境</td>
+        <td>海航</td>
+        <td>HU492</td>
+        <td>周二</td>
+      </tr>
+      <tr>
+        <td>西班牙<br>马德里</td>
+        <td>北京<br>天津入境</td>
+        <td>国航</td>
+        <td>CA908</td>
+        <td>周六</td>
+      </tr>
+      <tr>
+        <td>葡萄牙<br>里斯本</td>
+        <td>西安<br>北京</td>
+        <td>首航</td>
+        <td>JD430</td>
+        <td>周六</td>
+      </tr>
+      <tr>
+        <td>奥地利<br>维也纳</td>
+        <td>北京<br>呼和浩特入境</td>
+        <td>国航</td>
+        <td>CA842</td>
+        <td>周六</td>
+      </tr>
+      <tr>
+        <td>希腊<br>雅典</td>
+        <td>北京<br>石家庄入境</td>
+        <td>国航</td>
+        <td>CA864</td>
+        <td>周六</td>
+      </tr>
+      <tr>
+        <td>波兰<br>华沙</td>
+        <td>北京<br>太原入境</td>
+        <td>国航</td>
+        <td>CA738</td>
+        <td>周五</td>
+      </tr>
+      <tr>
+        <td>丹麦<br>哥本哈根</td>
+        <td>北京<br>石家庄入境</td>
+        <td>国航</td>
+        <td>CA878</td>
+        <td>周一</td>
+      </tr>
+      <tr>
+        <td>芬兰<br>赫尔辛基</td>
+        <td>上海</td>
+        <td>吉祥</td>
+        <td>HO1608</td>
+        <td>周日</td>
+      </tr>
+      <tr>
+        <td>瑞典<br>斯德哥尔摩</td>
+        <td>北京<br>天津入境</td>
+        <td>国航</td>
+        <td>CA912</td>
+        <td>周五</td>
+      </tr>
+    </tbody>
+  </table>
 </details>
 
 ##### 英国（伦敦）：持有效英/美/加签可转机，不能入境
@@ -633,7 +571,7 @@ description: 最后更新时间：6月20日
 
 ##### 加拿大（温哥华、多伦多）：符合 CTP 或持加签/绿卡可以 24 小时内转机
 
-- 没有加签或美国绿卡：行程须符合 CTP (China Transit Program)
+- 没有加签或美国绿卡：行程须符合 [加拿大 CTP (China Transit Program)](https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada/transit/without-visa/china-transit-eligibility.html)
   - 仅限美国出发，经加拿大前往中国
   - 必须乘坐加拿大籍航空公司（加航/西捷）的航班抵达加拿大
 - 持有任一有效加签，或持有美国绿卡且已申请 ETA：可直接转机
@@ -643,64 +581,60 @@ description: 最后更新时间：6月20日
 - 温哥华机场国际区和美国到达区非 24 小时开放，因此应该不能过夜转机
 - 加拿大目前每周有六个回国航班，且加航最快七月初复航
 
-<details>
-
-<summary>点击展开加拿大回国航班列表</summary>
-
-<table>
-<thead>
-  <tr>
-
-    <th>出发地</th>
-    <th>目的地</th>
-    <th>航司</th>
-    <th>航班号</th>
-    <th>班期</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td rowspan="2">多伦多<br>皮尔逊</td>
-    <td>北京（西安入境）</td>
-    <td>海航</td>
-    <td>HU7976</td>
-    <td>周三</td>
-  </tr>
-  <tr>
-    <td>上海</td>
-    <td>东航</td>
-    <td>MU208</td>
-    <td>周六</td>
-  </tr>
-  <tr>
-    <td rowspan="4">温哥华</td>
-    <td>北京（沈阳入境）</td>
-    <td>国航</td>
-    <td>CA992</td>
-    <td>周日</td>
-  </tr>
-  <tr>
-    <td>广州</td>
-    <td>南航</td>
-    <td>CZ330</td>
-    <td>周三</td>
-  </tr>
-  <tr>
-    <td>厦门</td>
-    <td>厦航</td>
-    <td>MF806</td>
-    <td>周五</td>
-  </tr>
-  <tr>
-    <td>成都</td>
-    <td>川航</td>
-    <td>3U8502</td>
-    <td>周二</td>
-  </tr>
-</tbody>
-</table>
-
-</details>
+  <details>
+    <summary>点击展开加拿大回国航班列表</summary>
+    <table>
+      <thead>
+        <tr>
+          <th>出发地</th>
+          <th>目的地</th>
+          <th>航司</th>
+          <th>航班号</th>
+          <th>班期</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td rowspan="2">多伦多<br>皮尔逊</td>
+          <td>北京（西安入境）</td>
+          <td>海航</td>
+          <td>HU7976</td>
+          <td>周三</td>
+        </tr>
+        <tr>
+          <td>上海</td>
+          <td>东航</td>
+          <td>MU208</td>
+          <td>周六</td>
+        </tr>
+        <tr>
+          <td rowspan="4">温哥华</td>
+          <td>北京（沈阳入境）</td>
+          <td>国航</td>
+          <td>CA992</td>
+          <td>周日</td>
+        </tr>
+        <tr>
+          <td>广州</td>
+          <td>南航</td>
+          <td>CZ330</td>
+          <td>周三</td>
+        </tr>
+        <tr>
+          <td>厦门</td>
+          <td>厦航</td>
+          <td>MF806</td>
+          <td>周五</td>
+        </tr>
+        <tr>
+          <td>成都</td>
+          <td>川航</td>
+          <td>3U8502</td>
+          <td>周二</td>
+        </tr>
+      </tbody>
+    </table>
+  </details>  
 
 ##### 墨西哥（墨西哥城）：持有特定签证可以免签入境转机
 
@@ -720,63 +654,38 @@ description: 最后更新时间：6月20日
 - 信息来源：[中国驻悉尼总领事馆](http://sydney.china-consulate.org/chn/lsbhyxz/t1778126.htm)
 - 悉尼目前每周有三个回国航班：
 
-
 <details>
-
-<summary>点击展开悉尼回国航班列表</summary>
-
-<table>
-
-<thead>
-<tr>
-
-```
-<th>目的地</th>
-<th>航司</th>
-<th>航班号</th>
-<th>班期</th>
-```
-
-  </tr>
-</thead>
-
-<tbody>
-
-  <tr>
-
-```
-<td rowspan="2">上海</td>
-<td>东航</td>
-<td>MU780</td>
-<td>周三</td>
-```
-
-  </tr>
-  <tr>
-
-```
-<td>新航</td>
-<td>NZ289</td>
-<td>周一</td>
-```
-
-  </tr>
-  <tr>
-
-```
-<td>广州</td>
-<td>南航</td>
-<td>CZ306</td>
-<td>周日</td>
-```
-
-  </tr>
-</tbody>
-</table>
-
+  <summary>点击展开悉尼回国航班列表</summary>
+  <table>
+    <thead>
+      <tr>
+        <th>目的地</th>
+        <th>航司</th>
+        <th>航班号</th>
+        <th>班期</th>
+      </tr>
+    </thead>
+		<tbody>
+ 			<tr>
+        <td rowspan="2">上海</td>
+        <td>东航</td>
+        <td>MU780</td>
+        <td>周三</td>
+      </tr>
+      <tr>
+        <td>新航</td>
+        <td>NZ289</td>
+        <td>周一</td>
+      </tr>
+      <tr>
+        <td>广州</td>
+        <td>南航</td>
+        <td>CZ306</td>
+        <td>周日</td>
+      </tr>
+    </tbody>
+	</table>
 </details>
-
-<br />
 
 ##### 新西兰（奥克兰）：允许 24 小时内转机，不能入境
 
@@ -785,55 +694,36 @@ description: 最后更新时间：6月20日
 - 6.22 后奥克兰每周有三个回国航班：
 
 <details>
-
-<summary>点击展开奥克兰回国航班列表</summary>
-
-<table>
-<thead>
-  <tr>
-
-```
-<th>目的地</th>
-<th>航司</th>
-<th>航班号</th>
-<th>班期</th>
-```
-
-  </tr>
-</thead>
-<tbody>
-  <tr>
-
-```
-<td rowspan="2">上海</td>
-<td>东航</td>
-<td>MU780</td>
-<td>周三</td>
-```
-
-  </tr>
-  <tr>
-
-```
-<td>新航</td>
-<td>NZ289</td>
-<td>周一</td>
-```
-
-  </tr>
-  <tr>
-
-```
-<td>广州</td>
-<td>南航</td>
-<td>CZ306</td>
-<td>周日</td>
-```
-
-  </tr>
-</tbody>
-</table>
-
+  <summary>点击展开奥克兰回国航班列表</summary>
+  <table>
+		<thead>
+  		<tr>
+        <th>目的地</th>
+        <th>航司</th>
+        <th>航班号</th>
+        <th>班期</th>
+  		</tr>
+		</thead>
+		<tbody>
+  		<tr>
+        <td rowspan="2">上海</td>
+        <td>东航</td>
+        <td>MU780</td>
+        <td>周三</td>
+      </tr>
+      <tr>
+        <td>新西兰</td>
+        <td>NZ289</td>
+        <td>周一</td>
+      </tr>
+      <tr>
+        <td>广州</td>
+        <td>南航</td>
+        <td>CZ306</td>
+        <td>周日</td>
+      </tr>
+    </tbody>
+	</table>
 </details>
 
 <br />
