--- a/_posts/2020-06-02-转机情况.md
+++ b/_posts/2020-06-02-转机情况.md
@@ -5,7 +5,7 @@ categories:
 
 notshow: true
 
-description: 最后更新时间：6月26日
+description: 最后更新时间：7月5日
 
 ---
 
@@ -15,13 +15,12 @@ description: 最后更新时间：6月26日
 
 ##### 香港：仍然不能往返内地，可有限制转往其它地方
 
-- 首阶段暂不设往返中国内地的过境服务
-- 香港机场往来广东各城市的客船继续暂停服务
+- 香港往返中国内地的过境服务继续暂停
+  - 包括转机、客船和陆路
 - 现阶段只能作为前往第二个转机地点的跳板，且有以下限制：
-  - 到达和离开香港的行程必须在同一订单中
+  - 到达和离开香港的行程必须在同一机票订单中
   - 必须行李直挂或者没有托运行李
   - 在香港转机停留时间不超过 24 小时
-  - 6.15 后两程可以不是同一航空公司集团
 
 ##### 台湾（桃园）：仍然不能往返大陆，可有限制转往其它地方
 
@@ -177,8 +176,6 @@ description: 最后更新时间：6月26日
       </tbody>
   </table>
 </details>
-
-
 ### <center>东南亚</center>
 
 ##### 马来西亚（吉隆坡）：可以免签入境过夜转机
@@ -561,11 +558,12 @@ description: 最后更新时间：6月26日
 * 持中国护照可以免签入境埃塞
 * 埃塞航 ET684 每周二 亚的斯亚贝巴—上海
 
-##### 埃及（开罗）：可以且必须先免签入境再转机
+##### 埃及（开罗）：须先免签入境再转机并提供核酸检测报告
 
 * 持中国护照可以免签入境埃及。
 * 四川航空目前在开罗机场没有免入境中转服务
 * 因此必须先入境埃及再办理下一程的乘机手续
+* 需要提供
 
 ### <center>北美</center>
 
