--- a/_posts/2020-06-02-转机情况.md
+++ b/_posts/2020-06-02-转机情况.md
@@ -5,7 +5,7 @@ categories:
 
 notshow: true
 
-description: 最后更新时间：7月5日
+description: 最后更新时间：7月12日
 
 ---
 
@@ -25,7 +25,7 @@ description: 最后更新时间：7月5日
 ##### 台湾（桃园）：仍然不能往返大陆，可有限制转往其它地方
 
 - 台湾桃园国际机场 6.25 起有限度开放转机
-- 继续暂停接受往返中国大陆旅客经台湾转机
+- 台湾继续暂停接受往返中国大陆旅客经台湾转机
 - 现阶段只能作为前往第二个转机地点的跳板，且有以下限制：
   - 仅限中华/华信、长荣/立荣、国泰/港龙三家航空公司
   - 须全程搭乘同一航空集团，在起始点拿到全程登机牌
@@ -303,7 +303,7 @@ description: 最后更新时间：7月5日
 
 ##### 新加坡：须乘新航集团且从东亚或澳新出发，不能入境
 
-- 【6.23 更新】新加坡和胜安航空[更新了转机信息](https://www.singaporeair.com/en_UK/sg/media-centre/news-alert/?id=kataac8r)：
+- 新加坡和胜安航空[更新了转机信息](https://www.singaporeair.com/en_UK/sg/media-centre/news-alert/?id=kataac8r)：
   - 只能从以下区域出发：中国大陆、香港、台湾、日本、韩国、澳洲、新西兰
   - 必须全程乘坐新航/胜安/酷航，且在同一张机票中
   - 尚不清楚是否允许以下路线：欧美—日韩澳新—新加坡—中国
@@ -387,8 +387,6 @@ description: 最后更新时间：7月5日
   * 不能成行：纽约—巴黎—法兰克福—上海
   * 可以成行：纽约—巴黎—明斯克—斯德哥尔摩—北京
 * 布鲁塞尔机场已暂时关闭非申根转机区域
-* **【6.16 更新】**法国航空 6.18 起恢复每周四巴黎至上海航班
-* **【6.16 更新】**汉莎航空 6.24 起恢复每周三法兰克福至上海航线
 
 <details>
   <summary>点击展开申根区回国航班列表</summary>
@@ -535,9 +533,6 @@ description: 最后更新时间：7月5日
 
 * 必须行李直挂或者没有托运行李
 * 似乎不能更换航站楼，有待进一步核实
-* **【6.16 更新】**维珍航空 8.4 起恢复每周三法兰克福至上海航线
-
-
 
 ##### 白俄罗斯（明斯克）：可以免签入境转机
 
@@ -547,9 +542,7 @@ description: 最后更新时间：7月5日
 
 ##### 俄罗斯（莫斯科）：禁止转机
 
-##### 土耳其：中国公民暂不能在土耳其转机
-
-- 土耳其航空国际航班已于 6.10 起逐步恢复，上海航线在恢复名单中，但目前暂未明确具体时间
+##### 土耳其：即将恢复上海航班，是否可转机尚待验证
 
 ### <center>非洲</center>
 
@@ -687,8 +680,8 @@ description: 最后更新时间：7月5日
 
 ##### 新西兰（奥克兰）：允许 24 小时内转机，不能入境
 
-- **【6.17 更新】**[网友分享](https://www.uscreditcardguide.com/youtiaojiandelengmenhuiguozhilusfo-lax-akl-can/)显示目前没有新签也可以成功转机
-- **【6.16 更新】**新西兰航空 6.22 起恢复每周一 NZ289 奥克兰至上海航班
+- [网友分享](https://www.uscreditcardguide.com/youtiaojiandelengmenhuiguozhilusfo-lax-akl-can/)显示目前没有新签也可以成功转机
+- 新西兰航空 6.22 起恢复每周一 NZ289 奥克兰至上海航班
 - 6.22 后奥克兰每周有三个回国航班：
 
 <details>
@@ -723,7 +716,6 @@ description: 最后更新时间：7月5日
     </tbody>
 	</table>
 </details>
-
 <br />
 
 欢迎您在下方的评论区补充和讨论世界各地的转机情况。
