--- a/_posts/2020-06-03-北美路线.md
+++ b/_posts/2020-06-03-北美路线.md
@@ -5,7 +5,7 @@ categories:
 
 notshow: true
 
-description: 最后更新时间：6月20日
+description: 最后更新时间：7月10日
 
 ---
 
@@ -14,93 +14,84 @@ description: 最后更新时间：6月20日
 ### <center>直飞</center>
 
 - 达美航空和美联航宣布恢复中国航线，每家公司计划每周运行两班
-- 美国目前每周有 4 班直飞，达美和美联航恢复后最多增加到 8 版
+- 美国目前每周有 8 班直飞中国大陆的航班
 - 目前美国直飞机票情况十分紧张
 
 <details>
-
-<summary>点击展开美国回国航班列表</summary>
-
-<center>
-
-注：<span style="color:red;">红色</span>为最新增加的航班
-
-<table>
-<thead>
-  <tr>
-
-    <th>出发</th>
-    <th>到达</th>
-    <th>航司</th>
-    <th>航班号</th>
-    <th>班期</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td>纽约<br>肯尼迪</td>
-    <td>上海</td>
-    <td>东航</td>
-    <td>MU588</td>
-    <td>周三</td>
-  </tr>
-  <tr>
-    <td rowspan="3">洛杉矶</td>
-    <td>北京</td>
-    <td>国航</td>
-    <td>CA988</td>
-    <td>周日</td>
-  </tr>
-  <tr>
-    <td>广州</td>
-    <td>南航</td>
-    <td>CZ328</td>
-    <td>周日</td>
-  </tr>
-  <tr>
-    <td>厦门</td>
-    <td>厦航</td>
-    <td>MF830</td>
-    <td>周一</td>
-  </tr>
-  <tr>
-    <td><span style="color:red;">西雅图</span></td>
-    <td><span style="color:red;">上海</span></td>
-    <td><span style="color:red;">达美</span></td>
-    <td><span style="color:red;">DL281</span></td>
-    <td><span style="color:red;">周四</span></td>
-  </tr>
-  <tr>
-    <td><span style="color:red;">底特律</span></td>
-    <td><span style="color:red;">上海</span></td>
-    <td><span style="color:red;">达美</span></td>
-    <td><span style="color:red;">DL583</span></td>
-    <td><span style="color:red;">周五</span></td>
-  </tr>
-  <tr>
-    <td colspan="5"><span style="color:red;">达美经停首尔仁川更换机组</span></td>
-  </tr>
-  <tr>
-    <td><span style="color:red;">旧金山</span></td>
-    <td><span style="color:red;">上海</span></td>
-    <td><span style="color:red;">美联航</span></td>
-    <td><span style="color:red;">UA857</span></td>
-    <td><span style="color:red;">待定</span></td>
-  </tr>
-  <tr>
-    <td colspan="5"><span style="color:red;">美联航经停东京成田更换机组</span></td>
-  </tr>
-</tbody>
-</table>
-
-</center>
+  <summary>点击展开美国回国航班列表</summary>
+  <table>
+    <thead>
+      <tr>
+        <th>出发</th>
+        <th>到达</th>
+        <th>航司</th>
+        <th>航班号</th>
+        <th>班期</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>纽约<br>肯尼迪</td>
+        <td>上海</td>
+        <td>东航</td>
+        <td>MU588</td>
+        <td>周三</td>
+      </tr>
+      <tr>
+        <td rowspan="3">洛杉矶</td>
+        <td>北京</td>
+        <td>国航</td>
+        <td>CA988</td>
+        <td>周日</td>
+      </tr>
+      <tr>
+        <td>广州</td>
+        <td>南航</td>
+        <td>CZ328</td>
+        <td>周日</td>
+      </tr>
+      <tr>
+        <td>厦门</td>
+        <td>厦航</td>
+        <td>MF830</td>
+        <td>周一</td>
+      </tr>
+      <tr>
+        <td>西雅图</td>
+        <td>上海</td>
+        <td>达美</td>
+        <td>DL287</td>
+        <td>周四</td>
+      </tr>
+      <tr>
+        <td>底特律</td>
+        <td>上海</td>
+        <td>达美</td>
+        <td>DL285</td>
+        <td>周五</td>
+      </tr>
+      <tr>
+        <td colspan="5">达美经停首尔仁川更换机组</td>
+      </tr>
+      <tr>
+        <td>旧金山</td>
+        <td>上海</td>
+        <td>美联航</td>
+        <td>UA857</td>
+        <td>周三/六</td>
+      </tr>
+      <tr>
+        <td colspan="5">美联航经停东京成田更换机组</td>
+      </tr>
+    </tbody>
+	</table>
 </details>
 
 - 加拿大目前每周有 6 班直飞
 - 加拿大直飞机票情况略好于美国，但也十分紧张
+- 加航计划 8.7 起恢复每周五温哥华至上海的航班，但尚未获得中国民航局批复。
 
 <details>
-
 <summary>点击展开加拿大回国航班列表</summary>
 
 <center>
@@ -359,7 +350,7 @@ description: 最后更新时间：6月20日
 
 ##### 北美 — 巴黎 — 北京/上海/广州
 
-- **【6.16 更新】**法国航空 6.18 起恢复每周四巴黎至上海航班
+- 法国航空 6.18 起恢复每周四巴黎至上海航班
 - 6.18 后巴黎每周有四班直飞北上广
 - 美联航/美航/加航/法航可以行李直挂国航
 - 达美/美联航/美航/加航/法航可以行李直挂东航
@@ -369,7 +360,7 @@ description: 最后更新时间：6月20日
 
 <summary>点击展开巴黎回国航班列表</summary>
 
-注：<span style="color:red;">红色</span>为最新增加的航班
+
 
 <table>
 <thead>
@@ -395,9 +386,9 @@ description: 最后更新时间：6月20日
     <td>周日</td>
   </tr>
   <tr>
-    <td><span style="color:red;">法航</span></td>
-    <td><span style="color:red;">AF198</span></td>
-    <td><span style="color:red;">周四</span></td>
+    <td>法航</td>
+    <td>AF198</td>
+    <td>周四</td>
   </tr>
   <tr>
     <td>广州</td>
@@ -412,8 +403,9 @@ description: 最后更新时间：6月20日
 
 ##### 北美 — 法兰克福 — 上海
 
-- **【6.16 更新】**汉莎航空 6.24 起恢复每周三法兰克福至上海航线
-- 6.24 后法兰克福每周有三班直飞上海
+- 汉莎航空 6.24 起恢复每周三法兰克福至上海航线
+- 汉莎航空 7.6 起恢复每周一法兰克福至南京航线
+- 目前法兰克福每周有四班直飞上海或南京
 - 美联航/美航/加航/汉莎可以行李直挂国航
 - 达美/美联航/美航/加航/汉莎可以行李直挂东航
 - 达美/美联航/美航/加航/汉莎可以行李直挂南航
@@ -422,7 +414,7 @@ description: 最后更新时间：6月20日
 
 <summary>点击展开法兰克福回国航班列表</summary>
 
-注：<span style="color:red;">红色</span>为最新增加的航班
+
 
 <table>
 <thead>
@@ -447,10 +439,20 @@ description: 最后更新时间：6月20日
     <td>周二</td>
   </tr>
   <tr>
-    <td><span style="color:red;">汉莎</span></td>
-    <td><span style="color:red;">LH728</span></td>
-    <td><span style="color:red;">周三</span></td>
+    <td>汉莎</td>
+    <td>LH728</td>
+    <td>周三</td>
   </tr>
+
+<tr>
+
+<td>南京</td>
+
+​    <td>汉莎</td>
+​    <td>LH728</td>
+​    <td>周一</td>
+  </tr>
+
 </tbody>
 </table>
 
@@ -465,7 +467,6 @@ description: 最后更新时间：6月20日
 - 达美/美联航/美航/荷航可以行李直挂厦航
 
 <details>
-
 <summary>点击展开阿姆斯特丹回国航班列表</summary>
 
 <table>
@@ -510,7 +511,7 @@ description: 最后更新时间：6月20日
 
 #### 北美 — 伦敦 — 中国
 
-- **【6.16 更新】**维珍航空 8.4 起恢复每周三法兰克福至上海航线
+- 维珍航空 8.4 起恢复每周三法兰克福至上海航线
 - 伦敦目前每周有四班飞上海/广州/青岛
 - 由于伦敦回国直飞机票也十分紧张，不建议作为转机考虑对象
 
@@ -887,6 +888,7 @@ description: 最后更新时间：6月20日
 - 国航每周一 CA878 哥本哈根至北京，石家庄入境
 - 国航每周五 CA912 斯德哥尔摩至北京，天津入境
 - 吉祥航空每周日 HO1608 赫尔辛基至上海浦东
+- 美国出发转乘吉祥航空须提供 7 日内有效核酸检测报告
 
 #### 北美 — 巴黎 / 法兰克福 / 阿姆斯特丹 — 明斯克 — 中国
 
@@ -910,6 +912,7 @@ description: 最后更新时间：6月20日
 - 吉祥航空每周二 HO1334 大阪关西至上海浦东
 - 两个航班时间刚好可接上
 - 不能托运行李，需提前准备好每一程的行程单
+- 美国出发转乘吉祥航空须提供 7 日内有效核酸检测报告
 
 <br />
 
