--- a/_posts/2020-06-10-微信群聊.md
+++ b/_posts/2020-06-10-微信群聊.md
@@ -10,7 +10,7 @@ notshow: true
 
 #### 海外回国群
 
-现有涵盖世界各地的共 42 个群聊
+现有涵盖世界各地的共 42 个回国群，请点击您所在的片区进入。
 
 [美国和加拿大](https://mp.weixin.qq.com/s/g4fkC7iRacEficFbuV5klA)
 
@@ -28,21 +28,15 @@ notshow: true
 
 #### 回国入境群
 
-现有涵盖全国各入境城市的共 33 个群聊
+现有涵盖全国各入境城市的共 33 个入境群。
 
-[北京（包括分流入境）](https://mp.weixin.qq.com/s/fReyR4BEs4QMBN6sk1GifA)
-
-[上海](https://mp.weixin.qq.com/s/zsBKfh5RTxI3e_XPkPx2zQ)
-
-[广州](https://mp.weixin.qq.com/s/UGKujzH6aaBUuezJRIycVQ)
-
-[其它城市](https://mp.weixin.qq.com/s/Fj2evCh1e01t4x-VQGSa-g)
+[群聊入口](https://mp.weixin.qq.com/s/iO6d4poad1E3WDRCkG61Ew)
 
 
 
 #### 转机讨论群
 
-现有东南亚、日韩、欧洲和非洲、香港等转机群
+现有东南亚、日韩、欧洲和非洲、香港等转机群。
 
 [群聊入口](https://mp.weixin.qq.com/s/lD0SCHUhaCT41UNF7_oGoQ)
 
@@ -50,7 +44,7 @@ notshow: true
 
 #### 退票讨论群
 
-现有亚洲、欧洲、北美、携程、其它第三方平台等退票群
+现有亚洲、欧洲、北美、携程、其它第三方平台等退票群。
 
 [群聊入口](https://mp.weixin.qq.com/s/KO0rZ0BzDTlmwLXP_Npc8Q)
 
@@ -61,3 +55,4 @@ notshow: true
 
 
 如果您建议设置新群或有其它问题，欢迎您在下方的评论区中提出，多谢！
+
