--- a/_posts/2020-07-13-一周盘点0713.md
+++ b/_posts/2020-07-13-一周盘点0713.md
@@ -19,7 +19,7 @@ description:
 
 - **德国汉莎航空**：已经于 **7.6** 恢复每周一法兰克福至**南京** LH780 航班，7.8 起恢复每周三南京至法兰克福航班，由 B747-8 执飞。
 - **韩国韩亚航空**：已经于 **7.12** 恢复每周日首尔仁川往返**南京** OZ349/OZ350 航班，由 B747-400 执飞。
-- **瑞士国际航空**：计划 **7.17** 恢复每周五苏黎世至**广州**的 LX188 航班，7.18 恢复每周六广州至苏黎世的 LX189 航班，由 B777-300ER 执飞。由于瑞航尚未获得中国民航局的批复，原定 7.10/7.11 的首个恢复航班已取消。
+- **瑞士国际航空**：计划 **7.17** 恢复每周五苏黎世至**上海**的 LX188 航班，7.18 恢复每周六广州至苏黎世的 LX189 航班，由 B777-300ER 执飞。由于瑞航尚未获得中国民航局的批复，原定 7.10/7.11 的首个恢复航班已取消。
 - **韩国釜山航空**（韩亚子公司）：计划 **7.17** 恢复每周五首尔仁川至**深圳**的 BX319 航班，7.18 恢复每周六深圳至首尔仁川的 BX310 航班，由 A321 执飞。目前釜山航空已获得深圳市的接受确认函，但尚不清楚中国民航局是否已经批复该航班。
 - **越南航空**：计划 **7.18** 恢复每周六河内往返**南京**的 VN5729 / VN5728 航班，并于 7.17 同步恢复每周五**伦敦**至河内的 VN54 航班。届时伦敦—河内—南京将全程使用同一架飞机，乘客可以无缝转机。
 - **日本航空**：计划 **7****.18** 起增加每周六东京成田往返**大连**的 JL829 航班，由 B787-9 执飞，从而将该航线增加到每周两班。由于日本航空尚未获得中国民航局的批复，原定 7.11 的首个新增航班已取消。
