--- a/_posts/2020-06-02-转机情况.md
+++ b/_posts/2020-06-02-转机情况.md
@@ -722,7 +722,9 @@ description: 最后更新时间：7月12日
 
 **更多相关内容：**
 
-[最新最全回国航班列表](/航班列表)
+[最新最全回国航班列表](/回国航班列表)
+
+[最新最全出国航班列表](/出国航班列表)
 
 [北美回国路线汇总](/北美路线)
 
