--- a/_posts/2020-06-10-微信群聊.md
+++ b/_posts/2020-06-10-微信群聊.md
@@ -8,47 +8,25 @@ notshow: true
 
 ---
 
-#### 海外回国群
-
-现有涵盖世界各地的共 42 个回国群，请点击您所在的片区进入。
-
-[美国和加拿大](https://mp.weixin.qq.com/s/g4fkC7iRacEficFbuV5klA)
-
-[欧洲](https://mp.weixin.qq.com/s/s-qzTFCvtQtzkvoFCD092g)
-
-[东南亚](https://mp.weixin.qq.com/s/WhD5duJqhhYSwh5m8xlFpA)
-
-[日本和韩国](https://mp.weixin.qq.com/s/17bphlZFwrnjW2FVvZrRCg)
-
-[澳大利亚和新西兰](https://mp.weixin.qq.com/s/W3gVgPeQTvPt3pdsdfjOPQ)
-
-[非洲、中东、南亚](https://mp.weixin.qq.com/s/Z6sjzjMTFk3YBYxTQTvfzw)
+#### [世界各地回国群](https://mp.weixin.qq.com/s/ihMYU-6iIArwB9TqD49Ueg)
 
 
 
-#### 回国入境群
-
-现有涵盖全国各入境城市的共 33 个入境群。
-
-[群聊入口](https://mp.weixin.qq.com/s/iO6d4poad1E3WDRCkG61Ew)
+#### [回国入境和隔离群](https://mp.weixin.qq.com/s/iO6d4poad1E3WDRCkG61Ew)
 
 
 
-#### 转机讨论群
-
-现有东南亚、日韩、欧洲和非洲、香港等转机群。
-
-[群聊入口](https://mp.weixin.qq.com/s/lD0SCHUhaCT41UNF7_oGoQ)
+####[世界各方向出国群](https://mp.weixin.qq.com/s/ihMYU-6iIArwB9TqD49Ueg)
 
 
 
-#### 退票讨论群
+#### [转机讨论群](https://mp.weixin.qq.com/s/lD0SCHUhaCT41UNF7_oGoQ)
 
-现有亚洲、欧洲、北美、携程、其它第三方平台等退票群。
 
-[群聊入口](https://mp.weixin.qq.com/s/KO0rZ0BzDTlmwLXP_Npc8Q)
 
-<br />
+#### [退票讨论群](https://mp.weixin.qq.com/s/KO0rZ0BzDTlmwLXP_Npc8Q)
+
+
 
 如果群已满或二维码已过期，请[点这里](https://mp.weixin.qq.com/s/lm14EySamxKjeVbmqG_Nng)添加管理员微信号，我会加您进群。
 
@@ -56,3 +34,10 @@ notshow: true
 
 如果您建议设置新群或有其它问题，欢迎您在下方的评论区中提出，多谢！
 
+
+
+**更多相关内容：**
+
+[最新最全回国航班列表](/回国航班列表)
+
+[最新最全出国航班列表](/出国航班列表)
